<resources>
    <string name="app_name">RecipeProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="HomeQuestion">What would you like to prepare today?</string>
    <string name="HomeHi">Hello, !</string>
    <string name="buscar_receta">Search recipe</string>
    <string name="categorias">Categories</string>
    <string name="Recetas_populares">Popular recipes</string>
    <string name="Ensalada">Salads</string>
    <string name="Plato_principal">Meats</string>
    <string name="Bebidas">Drinks</string>
    <string name="Postres">Desserts</string>
    <string name="nombre_receta">Sample recipe</string>
    <string name="opciones">My recipes</string>
    <string name="mis_recetas">Create recipe</string>
    <string name="inicio">Home</string>
    <string name="titulo_creacion">Title</string>
    <string name="ingredientes_creacion">Ingredients</string>
    <string name="descripcion_creacion">Description</string>
    <string name="guardar_receta">Save recipe</string>
    <string name="titulo_prueba">Test title</string>
    <string name="_30_minutos">30 minutes</string>
    <string name="salad">Salads</string>
    <string name="recetas_creadas">Your Recipes</string>
    <string name="i_am_sample_tittle">Test title</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="tiempo_necesario">Time required</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="value">Value</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="modify">Modify</string>
    <string name="options">Options</string>
    <string name="search_recipes">Search recipes...</string>
    <string name="no_recipes_found">No recipes found</string>
    <string name="filters">Filters</string>
    <string name="create_account">Create account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="difficulty_medium">Difficulty: Medium</string>
    <string name="login">Login</string>
    <string name="public_recipe">Public recipe</string>
    <string name="difficulty">Difficulty</string>
    <string name="clean">Clean</string>
    <string name="apply">Apply</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="logout">Logout</string>
    <string name="hello_user">Hello, %1$s</string>
    <string name="hello_chef">Hello, Chef</string>
    <string name="your_favorites">Your favorites</string>
    <string name="update_recipe">Update recipe</string>
    <string name="save_recipe">Save recipe</string>
</resources>
