<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_home" />

    <!--aqui un fondo viene bien, revisar-->


    <ImageView
        android:id="@+id/fondo1"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="-10dp"
        android:rotation="-10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/salad"
        android:alpha="0.5"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/HomeHi"
        android:textColor="@color/orange"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/HomeQuestion"
        android:textColor="#424242"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/searchview"
        android:backgroundTint="#DBD5D5"
        android:ems="10"

        android:focusable="false"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/buscar_receta"
        android:inputType="none"
        android:paddingStart="47dp"
        android:textColorHint="#5A5858"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="22dp"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/search_ic" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/poppins"
        android:text="@string/categorias"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="vertical"
            android:paddingLeft="7dp"
            android:paddingRight="10dp">

            <ImageView
                android:id="@+id/salad"
                style="@style/my_Style"
                android:background="@drawable/fondo_naranja"
                app:srcCompat="@drawable/ensalada" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/salad"
                android:layout_alignStart="@id/salad"
                android:layout_marginStart="7dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/Ensalada"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/mainDish"
                style="@style/my_Style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/salad"
                android:background="@drawable/fondo_naranja"
                app:srcCompat="@drawable/hamburguesa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainDish"
                android:layout_alignStart="@id/mainDish"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/Plato_principal"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/drinks"
                style="@style/my_Style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/mainDish"
                android:background="@drawable/fondo_naranja"
                app:srcCompat="@drawable/smoothie" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/drinks"
                android:layout_alignStart="@id/drinks"
                android:layout_alignEnd="@id/drinks"
                android:layout_marginStart="17dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="19dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/Bebidas"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/desserts"
                style="@style/my_Style"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@id/drinks"
                android:background="@drawable/fondo_naranja"
                app:srcCompat="@drawable/tarta" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/desserts"
                android:layout_alignStart="@id/desserts"
                android:layout_alignEnd="@id/desserts"
                android:layout_marginStart="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="-23dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/Postres"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </RelativeLayout>
    </HorizontalScrollView>

    <!--Mirar como implementar carrousel-->

    <TextView
        android:id="@+id/textView9"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/poppins"
        android:text="@string/Recetas_populares"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

       <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:listitem="@layout/recetas_popular"/>


</androidx.constraintlayout.widget.ConstraintLayout>